# mochi-poc

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
src/dictogloss/: database.py  models.py  settings.py
